<resources>
    <string name="app_name">ClientList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Client List</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>



    <string name="name">*Name</string>
    <string name="sec_name">*Second Name</string>
    <string name="tel">*Telephone</string>
    <string name="important">Regular</string>
    <string name="normal">Loyal</string>
    <string name="no_important">Simple</string>
    <string name="notas">Notes</string>
    <string name="special">Prime Client</string>
    <string name="special1">Prime Clients</string>
    <string name="open" translatable="false">Открыть</string>
    <string name="close" translatable="false">Закрыть</string>
    <string name="client"> All Clients</string>
    <string name="importance">Client type</string>
    <string name="settings">Settings</string>
    <string name="additional">Additionally</string>
    <string name="general_settings">Colors Settings</string>
    <string name="edit_activiy"> Client</string>
    <string name="app_names"> Client List</string>
    <string name="settings_activiy">Settings</string>
    <string name="main_activiy"> Client List</string>
    <string name="text_empty"> Empty List</string>
    <string name="text_no_result"> No result</string>
    <string name="my_clietns"> My Clients</string>
    <string name="home"> Home</string>
    <string name="web_page">Support and wishes</string>
    <string name="edit">Edit</string>
    <string name="call">Call</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Do you really want to delete the client?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text_settings">Text Color Settings</string>
    <string name="text_settings2">Text Settings</string>
    <string name="text_tel__color_summary">Choose Telephone text color</string>
    <string name="text_color_tel">Telephone color text</string>
    <string name="text_color_name">Name color text</string>
    <string name="text_color__name_summary">Choose Name text color</string>
    <string name="text_color_sec_name">Surname color text</string>
    <string name="text_size_big">Big</string>
    <string name="text_size_middle">Middle</string>
    <string name="text_size_small">Small</string>
    <string name="name_text_size"> Text Size</string>
    <string name="warning_if_empty"> Client information fields are empty!</string>
    <string name="secname_text_size">Surname text size</string>
    <string name="tel_text_size">Telephone text size</string>
    <string name="text_color__sec_name_summary">Choose Surname text color</string>
    <!--KEYS -->
    <string name="text_name_color_key">text_name_color_key</string>
    <string name="text_size_key">text_name_color_key</string>

    <string name="text_name_size_key">text_name_color_key</string>
    <string name="text_sec_name_size_key">text_name_color_key</string>
    <string name="text_tel_size_key">text_name_color_key</string>
    <string name="text_sec_name_color_key">text_sec_name_color_key</string>
    <string name="text_tel_color_key">text_tel_color_key</string>








</resources>
