<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/text_settings">


        <ListPreference
            android:defaultValue="#000000"
            android:entries="@array/text_color_array"
            android:entryValues="@array/text_color_array_values"
            android:icon="@drawable/ic_text_color"
            android:key="@string/text_name_color_key"
            android:summary="@string/text_color__name_summary"
            android:title="@string/text_color_name" />
        <ListPreference
            android:defaultValue="#000000"
            android:entries="@array/text_color_array"
            android:entryValues="@array/text_color_array_values"
            android:key="@string/text_sec_name_color_key"
            android:icon="@drawable/ic_icon_text_name"
            android:summary="@string/text_color__sec_name_summary"
            android:title="@string/text_color_sec_name" />
        <ListPreference
            android:defaultValue="#000000"
            android:entries="@array/text_color_array"
            android:entryValues="@array/text_color_array_values"
            android:key="@string/text_tel_color_key"
            android:icon="@drawable/ic_icon_text_tel"
            android:summary="@string/text_tel__color_summary"
            android:title="@string/text_color_tel" />
    </PreferenceCategory>
</PreferenceScreen>